assets/scss/custom.scss
.article-style a{
    color: #5a464c;
    font-weight: bold;
}
.article-style a:hover{
    text-decoration: underline;
}
.footnotes {
    font-size: 0.75em;
}
.fas, .fab, .ai{
    font-size: 1.0em; 
}
.navbar {
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
    border-bottom: 1px solid rgba(0, 0, 0, 0.09);
}
.alert, .article-style aside, .alert-note {
    color: #5a464c;
    background-color: #f3f6ee;
    border-color: #5a464c;
}
.article-style aside p::before, div.alert > div:first-child::before {
    position: absolute;
    top: -0.5rem;
    left: -2rem;
    font-size: 1.5rem;
    color: #5a464c;
    font-family: 'Font Awesome 5 Free';
    font-weight: 900;
    content: '\f05a';
    width: 1.5rem;
    text-align: center;
}
.article-style {
    font-size: 1rem;
}
.dark .article-style a{
    color: rgba(255, 255, 255, 0.68);
}
.dark .article-style a:hover{
    text-decoration: underline;
}
.dark .card-simple {
    background-color: #373636;
    }
.dark .navbar {
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
    border: 1px solid #2b2a2a;
}
body.dark, .dark {
    background:#2b2a2a
}
.dark .btn-outline-primary {
    color: #f3f6ee;
    border-color: #f3f6ee;
}
.dark .form-control {
    color: #f3f6ee;
    background-color: #373636;
}
.dark .alert, .dark .article-style aside, .dark .alert-note {
    color: #c3c3c3;
    background-color: #434343;
    border-color: #c3c3c3;
}
.dark .article-style aside p::before, .dark div.alert > div:first-child::before {
    position: absolute;
    top: -0.5rem;
    left: -2rem;
    font-size: 1.5rem;
    color: #c3c3c3;
    font-family: 'Font Awesome 5 Free';
    font-weight: 900;
    content: '\f05a';
    width: 1.5rem;
    text-align: center;
}

